--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.0.0/countUp.js" integrity="sha512-oKHFEN8NtMRzI0+BvFZLCS2uQN9LxvQc69/mGICoWfjbXEoEbYLCCfxdHZSU0yXmcGVftm21KkoSOn7+XYJT3A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <link rel="icon" 
+      type="image/png" 
+      href="https://upload.wikimedia.org/wikipedia/commons/1/11/Flag_of_the_United_Nations.png">
         <title>Covid-Tracking-app</title>
     </head>
     <style>
